# mcp_ecobici

./: .gitignore  LICENSE  README.md  bike_sharing.db  ecobici.duckdb  main.py  normalize_trips.py  pyproject.toml  run.py
agents/: sql_agent.py
app/: __init__.py  example.py  main.py  models.py
app/static/css/: styles.css
app/static/js/: main.js
app/templates/: index.html
mcp_server_bikes/: server.py
notebooks/: check.ipynb  send_bikes.ipynb
notebooks/ecobici_normalize/: ecobici.ipynb  predictions.ipynb  regression.ipynb  states.ipynb
